--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -1,8 +1,10 @@
+@use 'variables';
+
 body {
-  font-family: $font-stack;
-  color: $primary-color;
-  background-color: $background-color;
-  line-height: $line-height-base;
+  font-family: variables.$font-stack;
+  color: variables.$primary-color;
+  background-color: variables.$background-color;
+  line-height: variables.$line-height-base;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
