--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -1,8 +1,8 @@
 .layout {
-    .layout-container {
-        min-height: 100vh;
-        display: grid;
-        grid-template-columns: 350px auto;
-        gap: 20px;
-    }
+  .layout-container {
+    min-height: 100vh;
+    display: grid;
+    grid-template-columns: 350px auto;
+    gap: 4.5rem;
+  }
 }
