--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,7 @@
-@import 'variables';
-@import 'mixin';
-@import 'base';
-@import 'sidebar';
-@import 'navbar';
-@import 'layout';
+@use 'variables';
+@use 'mixin';
+@use 'base';
+@use 'sidebar';
+@use 'navbar';
+@use 'layout';
+@use 'maindashboard';
