--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -2,22 +2,20 @@
   height: 100vh;
   display: flex;
   flex-direction: column;
+  header {
+    flex-shrink: 0;
+  }
   .layout-container {
-    min-height: 100vh;
+    flex: 1;
     display: grid;
     grid-template-columns: 350px auto;
     gap: 4.5rem;
-    overflow: hidden;
-    min-height: 0;
-    // SideBar (primer hijo)
-    /* > *:first-child {
-      overflow-y: auto; // Hacer la barra lateral desplazable si es necesario
-      height: 100%;
-    }*/
-
+    overflow-y: auto;
+    & > *:first-child {
+      height: 100vh;
+    }
     & > *:nth-child(2) {
-      overflow-y: auto;
-      height: 100%;
+      height: 100vh;
     }
   }
 }
