--- a/src/scss/_maindashboard.scss
+++ b/src/scss/_maindashboard.scss
@@ -1,8 +1,13 @@
 @use 'variables';
 @use 'mixin' as mix;
+@use 'components/card';
 
 .main-dashboard {
+  //margin-top: 4rem;
   margin-top: 4rem;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
   .welcome-text {
     font-size: 2.25rem;
     font-weight: 500;
@@ -10,29 +15,33 @@
     margin: 0px 0px 1rem;
   }
   .content-dashboard {
+    flex: 1;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: auto;
     gap: 1.5rem;
     padding: 1rem;
+    overflow-y: auto;
     .section-dashboard {
       border-radius: 14px;
-      box-shadow: 4px 4px 4px 0 rgba(0, 0, 0, 0.25);
-      border: 1px solid black;
       padding: 1.5rem;
       &:nth-child(1) {
         grid-column: 1;
         grid-row: 1 / span 2;
+        box-shadow: 0px 7px 7px 4px rgba(0, 0, 0, 0.25);
+        overflow-y: auto;
       }
 
       &:nth-child(2) {
         grid-column: 2;
         grid-row: 1;
+        box-shadow: 0px 5px 5px 3px rgba(0, 0, 0, 0.25);
       }
 
       &:nth-child(3) {
         grid-column: 2;
         grid-row: 2;
+        box-shadow: 0px 2px 2px 2px rgba(0, 0, 0, 0.25);
       }
 
       .section-header {
@@ -74,65 +83,6 @@
         span {
           color: variables.$gray-2-color;
           margin-left: 0.5rem;
-        }
-      }
-      .todo-card {
-        position: relative;
-        border: 1px solid variables.$gray-2-color;
-        border-radius: 14px;
-        padding: 0.8rem 2rem 0.8rem 3rem;
-        margin-bottom: 1rem;
-        .todo-status {
-          position: absolute;
-          left: 5%;
-          text-align: center;
-          img {
-            display: block;
-            margin: 0 auto;
-          }
-        }
-        .todo-content {
-          display: flex;
-          flex-direction: row;
-          margin-bottom: 1rem;
-          .todo-text {
-            width: 70%;
-            h3 {
-              margin-top: 0px;
-            }
-            p {
-              color: variables.$gray-3-color;
-            }
-          }
-          .todo-img {
-            width: 30%;
-            img {
-              object-fit: cover;
-              height: 100px;
-              width: 100%;
-            }
-          }
-        }
-        .todo-information {
-          display: flex;
-          justify-content: space-between;
-          font-size: 0.8rem;
-          p {
-            span {
-              &.status {
-                @include mix.status-colors;
-              }
-            }
-            &.todo-date {
-              color: variables.$gray-2-color;
-            }
-          }
-        }
-        &.completed {
-          .todo-information {
-            display: flex;
-            flex-direction: column;
-          }
         }
       }
     }
