feat(AddTaskModal): UI Add Task Modal and connect with API to create a new Todo

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,10 +1,12 @@
 $font-stack: 'Infer', sans-serif;
 $primary-color: #000000;
 $pink-color: #ff6767;
+$orange-color: #f24e1e;
 $white-color: #ffffff;
 $gray-color: #f8f8f8;
 $gray-2-color: #a1a3ab;
 $gray-3-color: #747474;
+$gray-4-color: #f9f9f9;
 $blue-color: #3abeff;
 $background-color: #f5f8ff;
 $line-height-base: 1.2;
