--- a/src/scss/_myTasks.scss
+++ b/src/scss/_myTasks.scss
@@ -5,7 +5,7 @@
   margin-top: 4rem;
   flex: 1;
   display: grid;
-  grid-template-columns: 1.4fr 2fr;
+  grid-template-columns: 1fr 1fr;
   grid-template-rows: auto;
   gap: 1.5rem;
   padding: 1rem;
@@ -14,6 +14,31 @@
     box-shadow: 0px 3px 3px 3px rgba(0, 0, 0, 0.25);
     border-radius: 14px;
     padding: 1.5rem;
+    &:nth-child(1) {
+      overflow-y: auto;
+    }
+    h2 {
+      margin-bottom: 1.2rem;
+    }
+    &.todos {
+      min-width: 0;
+      button {
+        &.todo-link {
+          display: block;
+          width: 100%;
+          text-align: left;
+          background: none;
+          border: none;
+          padding: 0;
+          cursor: pointer;
+          box-sizing: border-box;
+        }
+        .todo-card {
+          width: 100%;
+          box-sizing: border-box;
+        }
+      }
+    }
   }
   .todo-info {
     .todo-header {
@@ -21,7 +46,11 @@
       grid-template-columns: 1fr 2fr;
       grid-template-rows: auto;
       gap: 1rem;
+      h2 {
+        font-size: 1rem;
+      }
       p {
+        font-size: 0.95rem;
         margin-bottom: 1rem;
         span {
           &.status {
@@ -30,6 +59,7 @@
         }
 
         &.todo-date {
+          font-size: 0.85rem;
           color: variables.$gray-2-color;
         }
       }
