--- a/src/scss/components/_card.scss
+++ b/src/scss/components/_card.scss
@@ -2,20 +2,10 @@
 @use '../mixin' as mix;
 
 .todo-card {
-  position: relative;
   border: 1px solid variables.$gray-2-color;
   border-radius: 14px;
-  padding: 0.8rem 2rem 0.8rem 3rem;
+  padding: 0.8rem 2rem;
   margin-bottom: 1rem;
-  .todo-status {
-    position: absolute;
-    left: 5%;
-    text-align: center;
-    img {
-      display: block;
-      margin: 0 auto;
-    }
-  }
   .todo-content {
     display: flex;
     flex-direction: row;
@@ -54,6 +44,9 @@
     }
   }
   &.completed {
+    p {
+      margin-bottom: 1rem;
+    }
     .todo-information {
       display: flex;
       flex-direction: column;
