fix(todoCard): Make dynamic date: createdAt and dueDate, add colors by status and priority

--- a/src/scss/_mixin.scss
+++ b/src/scss/_mixin.scss
@@ -8,3 +8,12 @@
     }
   }
 }
+
+@mixin priority-colors {
+  @each $priority, $color in variables.$priority-colors {
+    &.-#{$priority} {
+      --priority-color: #{$color};
+      color: var(--priority-color);
+    }
+  }
+}
