--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -16,3 +16,9 @@ $status-colors: (
   'todo': #f21e1e,
   'completed': #05a301,
 );
+
+$priority-colors: (
+  'low': #0225ff,
+  'moderate': #3abeff,
+  'extreme': #f21e1e,
+);
