--- a/src/scss/_myTasks.scss
+++ b/src/scss/_myTasks.scss
@@ -52,15 +52,32 @@
       p {
         font-size: 0.95rem;
         margin-bottom: 1rem;
+        &:last-child {
+          margin-bottom: 0px;
+        }
         span {
           &.status {
             @include mix.status-colors;
+          }
+          &.priority {
+            @include mix.priority-colors;
           }
         }
 
         &.todo-date {
           font-size: 0.85rem;
           color: variables.$gray-2-color;
+        }
+      }
+      .todo-img {
+        display: flex;
+        align-items: center;
+        img {
+          display: block;
+          width: 100%;
+          height: auto;
+          object-fit: cover;
+          border-radius: 6px;
         }
       }
     }
